--- a/content/themes/casper/partials/loop.hbs
+++ b/content/themes/casper/partials/loop.hbs
@@ -2,22 +2,24 @@
 <div class="extra-pagination inner">
     {{pagination}}
 </div>
-
 {{! This is the post loop - each post will be output using this markup }}
 {{#foreach posts}}
-<article class="{{post_class}}">
-    <header class="post-header">
-        <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-    </header>
-    <section class="post-excerpt">
-        <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
-    </section>
-    <footer class="post-meta">
-        {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
-        {{author}}
-        {{tags prefix=" on "}}
-        <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
-    </footer>
+<article class="{{post_class}} clearfix fixHeight">
+    <div class="post-feature-img fixHeightChildText" {{#if image}} style="background-image: url({{image}});"{{else}}style="background-image: url({{asset "img/post-feature-default.png"}}); background-position: 50% 50% !important;"{{/if}}><a href="{{url}}"/></div>
+    <div class="post-content-group fixHeightChildText">
+        <header class="post-header">
+            <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
+        </header>
+        <section class="post-excerpt">
+            <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
+        </section>
+        <footer class="post-meta">
+            {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
+            {{author}}
+            {{tags prefix=" on "}}
+            <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
+        </footer>
+    </div>
 </article>
 {{/foreach}}
 
